<resources>
    <string name="app_name">PetFinder</string>
    <!-- Strings related to action bar-->
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <!-- Strings related to bottom navigation bar-->
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="post">Post</string>
    <string name="friends">Friends</string>
    <string name="rank">Rank</string>

    <!-- Strings related to welcome page -->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="app_description">Help people find their best friend!</string>
    <!-- Strings related to login page-->
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="title">Welcome Back!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <!-- Strings related to registration page-->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_password_signup">Password</string>
    <string name="prompt_email_signup">E-mail</string>
    <string name="take_photo">Take a photo</string>
    <string name="already_have_acc">Already have an account?</string>

    <!-- Strings related to friends page-->
    <string name="friends_tab1">All</string>
    <string name="friends_tab2">Requests</string>
    <string name="friends_tab3">Connect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to profile page-->
    <string name="my_posts">My posts</string>
    <string name="update_first_name">Update First Name</string>
    <string name="update_last_name">Update Last Name</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <!-- Strings related to rank page-->
    <string name="rank_page_text">Collect points by helping people find their lost pets.</string>
    <string name="user_rankings">User rankings</string>
    <string name="your_score">Your score</string>
    <!-- Strings related to connect friends page-->
    <string name="discover_other_users">Discover other users</string>
</resources>